syntax = "proto3";

option java_package = "org.bitlap.common.proto.rpc";
option java_multiple_files = true;
option java_outer_classname = "Rpc";

message HelloRpcPB {
    message Req {
        string ping = 1;
    }
    message Res {
        string pong = 1;
    }
}

